// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-eBMEME jCpYeo"
  />
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-eBMEME jCpYeo"
  >
    <div
      class="sc-fMMURN bGytvG"
    >
      <span>
        Started streaming 1 records after 5 ms and completed after 10  ms.
      </span>
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-eldPxv kWGzoE"
  >
    <table
      class="sc-Nxspf bdEaHB"
    >
      <tbody
        class="sc-cfxfcM dRFFAB"
      >
        <tr
          class="sc-gmPhUn llGQWn"
        >
          <td
            class="sc-hRJfrW bBDFzt"
          >
            Server version
          </td>
          <td
            class="sc-iHbSHJ"
          />
        </tr>
        <tr
          class="sc-gmPhUn llGQWn"
        >
          <td
            class="sc-hRJfrW bBDFzt"
          >
            Server address
          </td>
          <td
            class="sc-iHbSHJ"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-gmPhUn llGQWn"
        >
          <td
            class="sc-hRJfrW bBDFzt"
          >
            Query
          </td>
          <td
            class="sc-iHbSHJ"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-gmPhUn llGQWn"
        >
          <td
            class="sc-hRJfrW bBDFzt"
          >
            Summary
            <div
              class="sc-gFAWRd ezoNvv fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-iHbSHJ"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-gmPhUn llGQWn"
        >
          <td
            class="sc-hRJfrW bBDFzt"
          >
            Response
            <div
              class="sc-gFAWRd ezoNvv fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-iHbSHJ"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
